# juujfish

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  chessengine  run.bat  run.sh
include/: bitboard.h  evaluation.h  heuristic.h  misc.h  movegen.h  moveorder.h  position.h  search.h  systhread.h  thread.h  transposition.h
includes/: bitboard.h  evaluation.h  heuristic.h  misc.h  movegen.h  moveorder.h  position.h  search.h  systhread.h  thread.h  transposition.h  types.h
src/core/: CMakeLists.txt  bitboard.cpp  bitboard.h  evaluation.cpp  heuristic.h  main.cpp  misc.h  movegen.cpp  movegen.h  moveorder.cpp  moveorder.h  position.cpp  position.h  search.cpp  search.h  thread.cpp  transposition.cpp  transposition.h  types.h
